compiler/testData/diagnostics/testsWithJsStdLib/name/classAndFunction.kt
// FIR_IDENTICAL
package foo

class <!JS_NAME_CLASH!>A(val x: Int)<!>

<!JS_NAME_CLASH!>fun A()<!> {}
